# ReLab

./: .clang-format  .gitignore  .mega-linter.yml  CMakeLists.txt  Doxyfile  README.md  TUTORIAL.md  Tutorial.md  afterdoc_8h_source.html  annotated.html  annotated_dup.js  autolink_8cpp.html  bluebear_install.sh  bug.html  build.py  build_extension.py  classA-members.html  classA.html  classAfterdoc__Test-members.html  classAfterdoc__Test.html  classAutolink__Test-members.html  classAutolink__Test.html  classB-members.html  classB.html  classC-members.html  classC.html  classC1.html  classC2.html  classC3.html  classC4.html  classC5.html  classD-members.html  classD.html  classE-members.html  classE.html  classEnum__Test-members.html  classEnum__Test.html  classExample__Test-members.html  classExample__Test.html  classFn__Test-members.html  (+753 more)
.github/workflows/: check-pull-request.yaml  create-github-release  create-github-release.yaml  generate-documentation.yaml  mega-linter.yaml  mega-linter.yml  run-unit-tests.yaml
benchmarks/: __init__.py  benchmarks.py  helpers.py
benchmarks/agents/: AgentInterface.py  BetaHMM.py  BetaVAE.py  CDQN.py  CategoricalDQN.py  DDQN.py  DQN.py  DiscreteHMM.py  DiscreteVAE.py  DuelingDDQN.py  DuelingDQN.py  HMM.py  IQN.py  JointHMM.py  JointVAE.py  MDQN.py  NoisyCDQN.py  NoisyCategoricalDQN.py  NoisyDDQN.py  NoisyDQN.py  PrioritizedDDQN.py  PrioritizedDQN.py  PrioritizedMDQN.py  QRDQNs.py  RainbowDQN.py  RainbowIQN.py  Random.py  VAE.py  VariationalModel.py  __init__.py  factory.py
benchmarks/environments/: SpritesEnv.py  __init__.py  factory.py
benchmarks/helpers/: FileSystem.py  JobRunners.py  MatPlotLib.py  SpritesDataset.py  TensorBoard.py  Timer.py  VariationalInference.py
benchmarks_cpp/: pybind11_wrapper.cpp
benchmarks_cpp/inc/: circular_list.hpp  compressor.hpp  compressors.hpp  data_buffer.hpp  debug.hpp  deque.hpp  experience.hpp  frame.hpp  frame_buffer.hpp  frame_storage.hpp  priority_tree.hpp  replay_buffer.hpp  serialize.hpp  thread_pool.hpp  timer.hpp
benchmarks_cpp/src/: circular_list.cpp  compressor.cpp  compressors.cpp  data_buffer.cpp  debug.cpp  deque.cpp  experience.cpp  frame.cpp  frame_buffer.cpp  frame_storage.cpp  priority_tree.cpp  replay_buffer.cpp  serialize.cpp  thread_pool.cpp  timer.cpp
benchmarks_cpp/test/: CMakeLists.txt  high_level_quickstart_example.cpp  main.cpp
docs/: Doxyfile  README.md  custom.css  delete_me.css  doxygen-awesome-darkmode-toggle.js  doxygen-awesome.css  generate_doc.sh  generate_readme.sh  header.html
relab/: __init__.py  build_cpp_module.py  cpp_module.py  relab.py
relab_cpp/: pybind11_wrapper.cpp
scripts/: debug_memory_leak.py  describe_params  describe_params.py  display_checkpoint  display_checkpoint.py  draw_graph  draw_graph.py  run_demo  run_demo.py  run_experiment  run_experiment.py  run_training  run_training.py  test_install  test_install.py  update_checkpoint  update_checkpoint.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+64 more)
shell/: bluebear_install.sh  run_demo.sh
tests/: main.cpp
(+170 files in other folders)
